gumb za nakup premium

--- a/templates/Userpage.html
+++ b/templates/Userpage.html
@@ -17,6 +17,7 @@
                 <div class="user-actions">
                     <a href="/set/profile" class="profile-button">Uredi profil</a>
                     <a href="/" class="profile-button">Domov</a>
+                    <a href="#" class="profile-button">Premium</a>
                 </div>
             </div>
         </div>
