zadnji popravki (višina, index (neavtomatsko))

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -59,6 +59,11 @@ div {
     margin-bottom: 1px;
 }
 
+.selector img {
+    width: 20em;
+    height: auto;
+}
+
 .selector a {
     text-decoration: none;
     color: white;
