--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                     <input type="submit" value="Išči">
                 </form> 
             </li>
-            <li><a href="#">chat</a></li>
+            <li><a href="#">💬</a></li>
             <li><a href="#" id="countryLink">Država:</a></li>
             
             
