--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
         }
         </script>
     <div class="selector">
-        <div><a href="/gora/triglav"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Triglav_-_winter.jpg/270px-Triglav_-_winter.jpg"><br>Triglav</a></div>
+        <div><a href="/gora/Triglav"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Triglav_-_winter.jpg/270px-Triglav_-_winter.jpg"><br>Triglav</a></div>
         <div><a href="/gora/Hochstuhl"><img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/HochstuhlVomWainaschGesehen.jpg"><br>Stol / Hochstuhl</a></div>
         <div><a href="/gora/škrlatica"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Skrlatica2.JPG"><br>Škrlatica</a></div>
     </div>
